# ephemeral-python

./: README.md  ephemeral_python.py  pyproject.toml
.github/workflows/: python-app.yml
