[tool.poetry]
name = "ephemeral_python"
version = "0.1.0"
description = "Create temporary IPython interpreters with dependencies"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ephemeral-python = "ephemeral_python:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
