[tool.poetry]
name = "ephemeral_python"
version = "0.1.0"
description = "Create temporary IPython interpreters with dependencies"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
xdg = "^5.1.1"

[tool.poetry.dev-dependencies]
pudb = "^2022.1.2"
flake8 = "^5.0.4"
pytest = "^7.1.3"

[tool.poetry.scripts]
ephemeral-python = "ephemeral_python:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
